[fix]: hactoberfest button text color on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -838,7 +838,8 @@ section {
   padding: 0;
   margin: 0;
 }
-.hacktoberfest-btn {
+.hacktoberfest-btn,
+.navbar-mobile .hacktoberfest-btn {
   background-color: #0c2e8a;
   color: #fff;
 }
